# FitIntel

./: README.md  main.py  pyproject.toml
db/: models.py
services/: db_handler.py  schemas.py  strava_api_handler.py
