[project]
name = "fitintel"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pyqt5>=5.15.11",
    "pyqt5-stubs==5.15.6.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
]
